[package]
name = "exchange-log-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-postgres = "0.7.10"
deadpool-postgres = "0.11.0"
postgres-types = { version = "0.2.6", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
color-eyre = "0.6.2"
clap = { version = "4.4.18", features = ["derive"] }
walkdir = "2.4.0"
regex = "1.10.3"
lazy_static = "1.4.0"
log = "0.4.20"
env_logger = "0.11.1"
bytes = "1.5.0"
encoding_rs = "0.8.33"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
indicatif = "0.17"
futures = "0.3"